--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="author" content="Your Name or App Name">
     <link rel="canonical" href="https://your-github-username.github.io/your-repo-name/" />
 
-    <!-- Google AdSense Script (IMPORTANT: replace with your actual publisher ID) -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+    <!-- Google AdSense Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7705060245286159"
      crossorigin="anonymous"></script>
 
     <!-- Prism.js CSS for syntax highlighting -->
@@ -200,10 +200,10 @@
         </div>
         
         <div class="ad-container">
-            <!-- IMPORTANT: Replace with your actual ad unit code -->
+            <!-- Google AdSense Ad Unit -->
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                 data-ad-client="ca-pub-7705060245286159"
                  data-ad-slot="YYYYYYYYYY"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
