--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
             font-size: 14px;
             line-height: 1.5;
             background: transparent !important;
+            box-sizing: border-box;
+            white-space: pre-wrap;
+            word-wrap: break-word;
         }
 
         /* Custom Prism theme adjustments */
