--- a/index.html
+++ b/index.html
@@ -109,24 +109,21 @@
         .output-container {
             position: relative;
             flex-grow: 1;
+            height: 100%;
             border: 1px solid var(--border-color);
             border-radius: 5px;
             background-color: var(--textarea-bg);
-            overflow: hidden;
+            overflow: auto;
         }
 
         .highlighted-output {
-            height: 100%;
-            overflow: auto;
             padding: 15px;
             margin: 0;
             font-family: "Courier New", Courier, monospace;
             font-size: 14px;
             line-height: 1.5;
             background: transparent !important;
-            box-sizing: border-box;
-            white-space: pre-wrap;
-            word-wrap: break-word;
+            min-height: 0;
         }
 
         /* Custom Prism theme adjustments */
