--- a/index.html
+++ b/index.html
@@ -178,7 +178,10 @@
         body.dark-mode .token.number { color: #26A69A; }   /* teal */
         body.dark-mode .token.boolean,
         body.dark-mode .token.null { color: #FFC107; }     /* amber */
-        body.dark-mode .token.punctuation { color: #A5D6A7; } /* green-gray */
+        body.dark-mode .token.punctuation {
+            color: #A5D6A7;
+            background: none;
+        } 
         
         .ad-container {
             margin-top: 20px;
