--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             background: none !important; /* Forcefully remove any background */
             border: none !important;      /* Remove any borders */
             box-shadow: none !important; /* Remove any shadows */
+            text-shadow: none !important;
         }
         
         .ad-container {
