--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
                     const headerDiv = document.createElement('div');
                     headerDiv.className = 'json-header';
-                    headerDiv.innerHTML = '<span class="toggle-arrow">▼</span> <span>{...}</span>'; // Simple summary
+                    headerDiv.innerHTML = `<span class="toggle-arrow">▼</span> <span>JSON Line ${index + 1}</span>`; // Simple summary
 
                     const contentDiv = document.createElement('div');
                     contentDiv.className = 'collapsible-content';
